--- a/content.css
+++ b/content.css
@@ -1,21 +1,27 @@
-body.focaltyped .focaltype-overlay {
+.focaltype-overlay {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: #fff;
+  opacity: 0.1;
   z-index: 1000;
+  transition-property: top, opacity;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  display: none;
 }
 
-textarea.focaltyped {
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
+body.focaltyped .focaltype-overlay {
+  display: block;
+  top: 0;
+  opacity: 1;
+}
+
+.focaltype-overlay textarea {
   width: 100% !important;
   height: 100%;
-  z-index: 1001;
   font-size: 32px;
   padding: 40px;
-  background-color: #fff !important;
 }
