--- a/content.css
+++ b/content.css
@@ -1,22 +1,22 @@
 .focaltype-overlay {
   position: fixed;
-  bottom: 0;
+  top: 100%;
   left: 0;
   width: 100%;
   height: 100%;
   background: #fff;
   opacity: 0.1;
   z-index: 1000;
-  transition-property: top, opacity;
-  transition-duration: 0.5s;
-  transition-timing-function: ease;
-  display: none;
+  -webkit-transition: all .5s ease;
 }
 
 body.focaltyped .focaltype-overlay {
-  display: block;
   top: 0;
   opacity: 1;
+}
+
+.focaltype-overlay .close {
+  float: right;
 }
 
 .focaltype-overlay textarea {
